- Removed the "contenteditable" attributes within the <p> tags for the output options, no need, they will be used as modules that can be edited in the final if neede.
- changed the seperation borders of the output options to a small grey line, no need for that all-around border.

- added a 'shadow + grow 1% + title="Click to select"' :hover option in the CSS for the output variables, UI looks much cleaner, and gives the user greater confirmation which option they are hovering over.

--- a/saveContentTemplate.html
+++ b/saveContentTemplate.html
@@ -35,8 +35,7 @@
 		</section>
 
 		<section id="savedText">
-			<p>Text:</p>
-			<p id="savedTextHere"></p>
+			<p id="savedTextHere" style="width: 300px"></p>
 		</section>
 	</main>
 	<!-- JavaScript -->
