Added basic <head> data, schema, meta, icon rel, etc

--- a/main.html
+++ b/main.html
@@ -4,6 +4,43 @@
 
 	<meta charset="UTF-8">
 	<title>BrandWield | Making content vision and content production, synonymous</title>
+	<meta name="title" content="BrandWield | Making content vision and content production, synonymous">
+	<meta name="description" content="Cut the content-creation process down by 90% or MORE! BrandWield is a content marketing software company making content vision and content production, synonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" href="brandwieldLogos/squareLogo.png">
+	<meta name="robots" content="index, follow">
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "Organization",
+			"@id": "https://brandwield.com/#organization",
+			"name": "BrandWield",
+			"legalName": "BrandWield Inc.",
+			"url": "https://brandwield.com",
+			"slogan": "Making content vision and content production, synonymous",
+			"foundingDate": "2022",
+			"brand":  {
+				"@type": "Brand",
+				"@id": "https://brandwield.com/#brand",
+				"name": "BrandWield",
+				"url": "https://brandwield.com"
+			},
+			"contactPoint": {
+				"@type": "ContactPoint",
+				"contactType": "Primary Customer Support",
+				"email": "brandwield@gmail.com",
+				"telephone": "+1-203-907-5536",
+				"contactOption": "TollFree",
+				"availableLanguage": "English"
+			},
+			"founders": [
+				{
+					"@type": "Person",
+					"name": "Jake Labate"
+				}
+			]
+		}
+	</script>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="main.css">
@@ -12,7 +49,7 @@
 	<!-- Firebase Setup -->
 	<script type="module" src="firebaseSetup.js"></script>
 
-	<!-- Application Section JavaScript -->
+	<!-- JavaScript -->
 	<script src="navbar.js"></script>
 	<script src="myBrand.js"></script>
 	<script src="newContent.js"></script>
