--- a/saveContentTemplate.html
+++ b/saveContentTemplate.html
@@ -27,8 +27,7 @@
 <body>
 	<header>
 		<h1>BrandWield Saved Content</h1>
-		<text>New content saved by <span class="legalBusinessName"></span></text>.<br>
-		<text>Your content was saved at <span class="dateAndTime"></span></text>.
+		<p class="dateAndTime"></p>
 	</header>
 	<main>
 		<section id="savedMedia">
@@ -42,9 +41,7 @@
 	<script>
 		// Set values
 		let dateAndTime = new Date();
-		let legalBusinessName = localStorage.getItem('legalBusinessName');
 		// Apply values
-		document.querySelectorAll('.companyLegalName').innerText = legalBusinessName;
 		document.querySelectorAll('.dateAndTime').innerText = dateAndTime;
 	</script>
 
